--- a/settings.yml
+++ b/settings.yml
@@ -277,3 +277,7 @@ friends:
 safe_logout:
   timer: 10
   completed_command: kick $player hubkick
+scoreboard:
+  name: '&4MyZ Stats - Career Kills@&4MyZ Stats - Current Kills@&4MyZ Stats - Status@&4MyZ
+    Stats - Skills@&4MyZ Stats - Deaths@&4MyZ Stats - Other'
+  data: Players Killed:%kills.player%,Zombies Killed:%kills.zombie%,Pigmen Killed:%kills.pigman%,Giants Killed:%kills.giant%@Players Killed:%tracked.kills.player%,Zombies Killed:%tracked.kills.zombie%,Pigmen Killed:%tracked.kills.pigman%,Giants Killed:%tracked.kills.giant%@Bleeding:%bleeding%,Poisoned:%poisoned%,Temperature:%temperature%,Thirst:%thirst%@Immunity Level:%immunity%,Toughness Level:%toughness%@Zombie:%killer.zombie%,Pigman:%killer.pigman%,Giant:%killer.giant%,Guard%killer.guard%,Projectile:%killer.projectile%,Fire:%killer.fire%,Falling:%killer.fall%,Drown:%killer.drown%,Void:%killer.void%,Magic:%killer.magic%,Starvation:%killer.hunger%,Explode:%killer.explode%,Other:%killer.other%@Friends:%friends%,Revives:%revives.other%,Drinks Consumed:%drinks%,Deaths:%deaths%,Bandages Used:%heals.self.infection%,Heals:%heals.other%,zPoints:%z_points%
