update changes to 4.0.74153

--- a/mob_settings.yml
+++ b/mob_settings.yml
@@ -331,6 +331,8 @@ horse:
     speed:
       target_multiplier: 1.5
   is_cannibal: true
+  mounted_undead:
+    chance: 70
 wolf:
   names:
   - Max
