--- a/highscores/stats.yml
+++ b/highscores/stats.yml
@@ -43,8 +43,8 @@ killer:
     value: 0
 kills:
   zombie:
-    owner: ''
-    value: 0
+    owner: aa33e73b-a2d3-438d-8c41-daf4c4798f9d
+    value: 37
   player:
     owner: ''
     value: 0
@@ -55,8 +55,8 @@ kills:
     owner: ''
     value: 0
   guard:
-    owner: ''
-    value: 0
+    owner: aa33e73b-a2d3-438d-8c41-daf4c4798f9d
+    value: 1
 revives:
   self:
     owner: ''
@@ -68,16 +68,16 @@ friends:
   owner: ''
   value: 0
 drinks:
-  owner: ''
-  value: 0
+  owner: aa33e73b-a2d3-438d-8c41-daf4c4798f9d
+  value: 1
 deaths:
   owner: cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf
-  value: 5
+  value: 9
 heals:
   self:
     infection:
-      owner: ''
-      value: 0
+      owner: aa33e73b-a2d3-438d-8c41-daf4c4798f9d
+      value: 1
     bleeding:
       owner: ''
       value: 0
@@ -92,5 +92,5 @@ deathstate:
     owner: ''
     value: 0
 z_points:
-  owner: ''
-  value: 0
+  owner: aa33e73b-a2d3-438d-8c41-daf4c4798f9d
+  value: 38
