--- a/store.yml
+++ b/store.yml
@@ -37,6 +37,15 @@ main:
               - '§ePrice: §650 §ezPoints'
           command: myz userdata $player toughness +1
           cost: 50.0
+      children:
+        Back:
+          display:
+            ==: org.bukkit.inventory.ItemStack
+            type: NETHER_STAR
+            meta:
+              ==: ItemMeta
+              meta-type: UNSPECIFIC
+              display-name: Back
     '&eItems':
       display:
         ==: org.bukkit.inventory.ItemStack
@@ -123,6 +132,15 @@ main:
               - '§ePrice: §611 §ezPoints'
           command: give $player minecraft:apple 1 0
           cost: 11.0
+      children:
+        Back:
+          display:
+            ==: org.bukkit.inventory.ItemStack
+            type: NETHER_STAR
+            meta:
+              ==: ItemMeta
+              meta-type: UNSPECIFIC
+              display-name: Back
     '&4Level Up':
       display:
         ==: org.bukkit.inventory.ItemStack
@@ -135,3 +153,11 @@ main:
           - '§ePrice: §650 §ezPoints'
       command: myz userdata $player rank +1
       cost: 50.0
+    Back:
+      display:
+        ==: org.bukkit.inventory.ItemStack
+        type: NETHER_STAR
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: Back
