--- a/highscores/stats.yml
+++ b/highscores/stats.yml
@@ -3,8 +3,8 @@ killer:
     owner: ''
     value: 0
   pigman:
-    owner: ''
-    value: 0
+    owner: 2c2a05d9-6f3e-4d8b-9bf8-1ac6805ff065
+    value: 1
   giant:
     owner: ''
     value: 0
@@ -36,8 +36,8 @@ killer:
     owner: ''
     value: 0
   magic:
-    owner: ''
-    value: 0
+    owner: cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf
+    value: 1
   other:
     owner: ''
     value: 0
@@ -49,8 +49,8 @@ kills:
     owner: ''
     value: 0
   pigman:
-    owner: ''
-    value: 0
+    owner: cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf
+    value: 17
   giant:
     owner: ''
     value: 0
@@ -72,7 +72,7 @@ drinks:
   value: 1
 deaths:
   owner: cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf
-  value: 9
+  value: 10
 heals:
   self:
     infection:
