--- a/mob_settings.yml
+++ b/mob_settings.yml
@@ -245,6 +245,139 @@ guard:
   - lRoixl
   - DoomLexus
   match_skins_to_names: false
+  kits:
+    melee:
+      '1':
+        hand:
+          ==: org.bukkit.inventory.ItemStack
+          type: STONE_SWORD
+        chestplate:
+          ==: org.bukkit.inventory.ItemStack
+          type: CHAINMAIL_CHESTPLATE
+        leggings:
+          ==: org.bukkit.inventory.ItemStack
+          type: CHAINMAIL_LEGGINGS
+      '2':
+        hand:
+          ==: org.bukkit.inventory.ItemStack
+          type: IRON_AXE
+        helmet:
+          ==: org.bukkit.inventory.ItemStack
+          type: GOLD_HELMET
+        chestplate:
+          ==: org.bukkit.inventory.ItemStack
+          type: LEATHER_CHESTPLATE
+      '3':
+        hand:
+          ==: org.bukkit.inventory.ItemStack
+          type: WOOD_SPADE
+        helmet:
+          ==: org.bukkit.inventory.ItemStack
+          type: PUMPKIN
+        boots:
+          ==: org.bukkit.inventory.ItemStack
+          type: IRON_BOOTS
+    ranged:
+      '1':
+        hand:
+          ==: org.bukkit.inventory.ItemStack
+          type: BOW
+        chestplate:
+          ==: org.bukkit.inventory.ItemStack
+          type: CHAINMAIL_CHESTPLATE
+        boots:
+          ==: org.bukkit.inventory.ItemStack
+          type: LEATHER_BOOTS
+      '2':
+        hand:
+          ==: org.bukkit.inventory.ItemStack
+          type: BOW
+        helmet:
+          ==: org.bukkit.inventory.ItemStack
+          type: GOLD_HELMET
+        chestplate:
+          ==: org.bukkit.inventory.ItemStack
+          type: GOLD_CHESTPLATE
+      '3':
+        hand:
+          ==: org.bukkit.inventory.ItemStack
+          type: DIAMOND
+          meta:
+            ==: ItemMeta
+            meta-type: UNSPECIFIC
+            display-name: §eTrinket§e «?»
+            lore:
+            - §eLeft-click to set the owner.
+            - '§eExplodes when:'
+            - §e- picked up
+            - §e- shot out of a dispenser
+            - §e- a chest containing this item is opened
+            - §e- placed in an item frame, and nearby
+            - §e ...pressure plates are stepped on.
+            - §e§oOwners cannot trigger their own traps.
+        chestplate:
+          ==: org.bukkit.inventory.ItemStack
+          type: LEATHER_CHESTPLATE
+        boots:
+          ==: org.bukkit.inventory.ItemStack
+          type: IRON_BOOTS
+      '4':
+        hand:
+          ==: org.bukkit.inventory.ItemStack
+          type: POWERED_MINECART
+          meta:
+            ==: ItemMeta
+            meta-type: UNSPECIFIC
+            display-name: §eToaster§e
+            lore:
+            - §eAnti-personnel mine.
+            - '§eTriggers a fiery explosion when:'
+            - §e- walked into by mobs or players
+            - §e- struck with fists or items
+            - §e- shot by projectiles
+        chestplate:
+          ==: org.bukkit.inventory.ItemStack
+          type: LEATHER_CHESTPLATE
+        boots:
+          ==: org.bukkit.inventory.ItemStack
+          type: IRON_BOOTS
+      '5':
+        hand:
+          ==: org.bukkit.inventory.ItemStack
+          type: REDSTONE_COMPARATOR
+          meta:
+            ==: ItemMeta
+            meta-type: TILE_ENTITY
+            display-name: §ePutty§e «2»
+            lore:
+            - §eRemote explosives.
+            - §eRight click to throw.
+            - §eLeft click to detonate.
+            blockMaterial: REDSTONE_COMPARATOR
+        chestplate:
+          ==: org.bukkit.inventory.ItemStack
+          type: LEATHER_CHESTPLATE
+        boots:
+          ==: org.bukkit.inventory.ItemStack
+          type: IRON_BOOTS
+      '6':
+        hand:
+          ==: org.bukkit.inventory.ItemStack
+          type: INK_SACK
+          damage: 3
+          meta:
+            ==: ItemMeta
+            meta-type: UNSPECIFIC
+            display-name: §eCocoPops§e
+            lore:
+            - §eA cluster bomb that releases
+            - §e10 bomblets upon detonation.
+        chestplate:
+          ==: org.bukkit.inventory.ItemStack
+          type: LEATHER_CHESTPLATE
+        boots:
+          ==: org.bukkit.inventory.ItemStack
+          type: IRON_BOOTS
 giant:
   spawn:
     chance: 100
@@ -585,3 +718,4 @@ default_mobs:
       giant: false
 mount_naturally:
   one_in: 100
+  chance_one_in_x_mobs: 20
